--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  fluent_ui: ^3.8.0
+  hooks_riverpod: ^1.0.3
+  flutter_hooks: ^0.18.2
+  url_launcher: ^6.0.18
+  archive: ^3.1.11
+  image_compression: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -21,6 +26,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
 msix_config:
   display_name: apack
