--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,21 @@ dependencies:
   flutter_hooks: ^0.18.2
   url_launcher: ^6.0.18
   archive: ^3.1.11
-  image_compression: ^1.0.3
+  image_compression_flutter: ^1.0.2
+  url_strategy: ^0.2.0
+  bitsdojo_window: ^0.1.1+1
+  flutter_acrylic: ^1.0.0+1
+  system_theme: ^1.0.1
+  state_notifier: ^0.7.2+1
+  freezed_annotation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
   msix: ^2.8.13
+  build_runner:
+  freezed:
 
 flutter:
   uses-material-design: true
