--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@
 # Web related
 lib/generated_plugin_registrant.dart
 
+# Windows related
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugins.cmake
+
 # Symbolication related
 app.*.symbols
 
@@ -46,3 +50,7 @@ app.*.map.json
 /android/app/release
 
 /msix/*.msix
+
+# Generated files
+**/*.g.dart
+**/*.freezed.dart
