remove generated files

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 lib/generated_plugin_registrant.dart
 
 # Windows related
+windows/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugins.cmake
 
