--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,11 @@ dependencies:
   image_compression_flutter: ^1.0.2
   url_strategy: ^0.2.0
   bitsdojo_window: ^0.1.1+1
-  flutter_acrylic: ^1.0.0+1
   system_theme: ^1.0.1
   state_notifier: ^0.7.2+1
   freezed_annotation: ^1.1.0
+  file_selector_macos: ^0.0.4+1
+  file_selector_linux: ^0.0.2+1
 
 dev_dependencies:
   flutter_test:
