--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   freezed_annotation: ^1.1.0
   file_selector_macos: ^0.0.4+1
   file_selector_linux: ^0.0.2+1
+  file_selector: ^0.8.3
+  path: ^1.8.0
+  image: ^3.1.1
 
 dev_dependencies:
   flutter_test:
