--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   file_selector: ^0.8.3
   path: ^1.8.0
   image: ^3.1.1
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
